static/style.css
body {
    margin: 0;
    overflow: hidden;
}

#fore {
    background-color: white;
    visibility: hidden;
    position: absolute;
    left: 0vw;
    top: 0vh;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    padding: 0;
    margin: 0;

}

#toolbar,
#right-toolbar {
    background-color: white;
    visibility: visible;
    border: 1px solid #dde;
    width: 100px;
    padding: 0;
    margin: 0;
    display: grid;
    grid-template-columns: repeat(2, 50px);
    grid-template-rows: 25px 25px repeat(8, 50px) 200px 1em;
    grid-gap: 0;
    box-sizing: border-box;
}

#toolbar {
    position: absolute;
    left: 0px;
}

#right-toolbar {
    grid-template-columns: repeat(1, 50px);
    grid-template-rows: repeat(3, 50px) repeat(8, 30px) 200px 100px 50px;
    position: absolute;
    width: 50px;
    right: 0px;

}

.button,
.buttonsize {
    width: 50px;
    height: 50px;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    background-color: rgb(220, 220, 209);
    box-shadow: inset 0px 3px 5px rgb(151, 151, 140),
        inset 0px -3px 5px rgb(112, 112, 103);
    cursor: pointer;
    user-select: none;
}

.color_stack_item {
    width: 50px;
    height: 30px;

}

.button.tool-disabled {
    opacity: 0.35;
    cursor: not-allowed;
}

.button.pressed {
    background-color: rgb(170, 170, 158);
    box-shadow: inset 0px 4px 8px rgb(90, 90, 82),
        inset 0px -2px 3px rgb(140, 140, 130);
}

#canvas-area {
    background-color: white;
    width: calc(100vw - 151px);
    height: 100vh;
    position: absolute;
    left: 101px;
    overflow: hidden;
    padding: 0;
    margin: 0;
    pointer-events: auto;
    touch-action: none;
}

/* #canvas-area canvas {
    width: 100%;
    height: 100%;
    touch-action: none;

} */
#view-canvas {
    cursor: crosshair;
    pointer-events: auto;
    width: 100%;
    height: 100%;
    image-rendering: pixelated;
    display: block;
}

#document-canvas {
    width: 300px;
    height: 300px;
    border: 1px solid #555;
}

#debug-modal {
    position: fixed;
    top: 0; left: 0; right: 0; bottom: 0;
    background: rgba(0, 0, 0, 0.65);
    z-index: 1000;
    align-items: center;
    justify-content: center;
}

#debug-modal-inner {
    background: #f5f5f0;
    padding: 16px;
    border-radius: 4px;
    font-family: monospace;
    max-height: 90vh;
    overflow: auto;
}

#debug-modal-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 12px;
    font-size: 14px;
    font-weight: bold;
}

#debug-modal-header button {
    background: none;
    border: 1px solid #aaa;
    cursor: pointer;
    font-size: 16px;
    padding: 2px 6px;
}

#debug-canvases {
    display: flex;
    gap: 16px;
    align-items: flex-start;
}

.debug-label {
    font-size: 11px;
    color: #666;
    margin-bottom: 4px;
}

.debug-btn {
    font-family: monospace;
    font-size: 12px;
    cursor: pointer;
    justify-content: center;
    display: flex;
    align-items: center;
    color: #444;
    grid-column: span 2;
    width: 100px;
    height: 25px;
}

#color-selector-div-back {
    position: relative;
    width: 28px;
    height: 28px;
    padding: 10px;
    border: solid 1px #aaa;
    background-color: rgba(255, 255, 255, 255);
    /* justify-content: center;
    display: flex;
    align-items: center; */

}

#color-selector-div-fore {
    position: relative;
    width: 30px;
    height: 30px;
    background-color: rgba(0, 0, 0, 255);
    z-index: 1;

}

#hl-selector-canvas {
    width: 50px;
    height: 200px;
    border: 1px solid black inset;
    background-color: rgba(0, 0, 0, 255);
    cursor: crosshair;
}

#sat-selector-canvas {
    width: 50px;
    height: 100px;
    border: 1px solid black inset;
    background-color: rgba(0, 0, 0, 255);
    cursor: crosshair;
}

#colorswap {
    font-family: monospace;
    width: 100px;
    height: 2em;
    cursor: pointer;
    justify-content: center;
    display: flex;
    align-items: center;
    color: #444;
}

.scribble {
    background-image: url("icons.png");
    background-size: 200px 200px;
    background-position: -5px -5px;
    background-repeat: no-repeat;

}

.rect {
    background-image: url("rect.png");
    background-repeat: no-repeat;
}

.rect.filled {
    background-image: url("rect.filled.png");
    background-repeat: no-repeat;
}

.line {
    background-image: url("icons.png");
    background-size: 200px 200px;
    background-position: -97px -54px;
    background-repeat: no-repeat;
}

.circle {
    background-image: url(circle.png);
    background-repeat: no-repeat;
}

.circle.filled {
    background-image: url(circle.filled.png);
    background-repeat: no-repeat;
}

.dropper {
    background-image: url(dropper.png);
    background-size: 50px 50px;
}

.cursor_size {
    background-image: url(linewidth.png);
}

.mandala {
    background-image: url(mandala.png);
    background-size: 40px 40px;

}

.floodfill {
    background-image: url("icons.png");
    background-size: 200px 200px;
    background-position: -5px -54px;
    background-repeat: no-repeat;
}

.eraser {
    background-image: url(icons3.png);
    background-size: 100px 100px;
    background-position: -9px -4px;
}

.clearall {
    background-image: url(icons2.png);
    background-size: 200px 200px;
    background-position: 0px -104px;

}

.menu-bar-button {
    background-color: white;
    box-shadow: inset 3px 3px 5px #eee, inset -3px -3px 5px #aaa;
    /* Emboss effect */
}

.save,
.load {
    height: 25px;
    cursor: pointer;
    font-family: monospace;
    text-align: center;
    font-size: 16px;
}

.gdrive {
    grid-column: span 2;
    height: 25px;
    width: 100px;
    background-color: #ee9;
}

.undo {
    background-image: url("undoredo.png");
    background-size: 100px 100px;
    background-position: -4px -22px;
}

.redo {
    background-image: url("undoredo.png");
    background-size: 100px 100px;
    background-position: -50px -22px;
}

.fillstyle {
    background-image: url("fillstyle_outline.png");

}

.fillstyle.filled {
    background-image: url("fillstyle.png");

}

#file_input {
    display: none;
}
#mandala-panel {
    display: none;
    grid-column: span 2;
    grid-row: span 2;
    background: rgb(210, 210, 200);
    padding: 6px 4px;
    font-family: monospace;
    font-size: 11px;
    box-sizing: border-box;
}

#mandala-panel.visible {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.mandala-row {
    display: flex;
    align-items: center;
    gap: 4px;
}

.mandala-ctrl-btn {
    background: rgb(220, 220, 209);
    box-shadow: inset 0px 2px 3px rgb(151, 151, 140), inset 0px -2px 3px rgb(112, 112, 103);
    border: none;
    cursor: pointer;
    font-family: monospace;
    font-size: 12px;
    padding: 1px 5px;
    min-width: 18px;
}

.mandala-ctrl-btn.pressed {
    box-shadow: inset 0px -2px 3px rgb(151, 151, 140), inset 0px 2px 3px rgb(112, 112, 103);
}

